@@ -1,29 +1,44 @@
 description = "Apereo CAS Native GraalVM Web Application"
 
+apply plugin: "java"
+apply plugin: "org.springframework.boot"
+apply plugin: "org.graalvm.buildtools.native"
+
 ext {
-    casNativeWebApplication = true
+    publishMetadata = true
+    projectMetadata = [
+        facets: ["web"],
+        category: "Web Application",
+        title: "GraalVM Native Image Web Application",
+        aliases: ["graalvmwebapp"]
+    ]
 }
 
-configurations.configureEach {
-    /*
-    Log4j does not support GraalVM and leads to com.oracle.svm.core.jdk.UnsupportedFeatureError:
-    Defining hidden classes at runtime is not supported.
-     */
-    exclude(group: "org.apache.logging.log4j", module: "log4j-api")
-    exclude(group: "org.apache.logging.log4j", module: "log4j-jakarta-web")
-    exclude(group: "org.apache.logging.log4j", module: "log4j-web")
-    exclude(group: "org.apache.logging.log4j", module: "log4j-jcl")
-    exclude(group: "org.apache.logging.log4j", module: "log4j-slf4j-impl")
-    exclude(group: "org.apache.logging.log4j", module: "log4j-slf4j2-impl")
-    exclude(group: "org.apereo.cas", module: "cas-server-core-logging")
-    
-    exclude(group: "org.springframework.boot", module: "spring-boot-devtools")
-    exclude(group: "org.springframework.cloud", module: "spring-cloud-starter-bootstrap")
+configurations {
+    configureEach {
+        exclude(group: "org.apache.groovy", module: "groovy-templates")
+        /*
+            Log4j does not support GraalVM and leads to com.oracle.svm.core.jdk.UnsupportedFeatureError:
+            Defining hidden classes at runtime is not supported. We use logback instead.
+         */
+        exclude(group: "org.apache.logging.log4j", module: "log4j-api")
+        exclude(group: "org.apache.logging.log4j", module: "log4j-jakarta-web")
+        exclude(group: "org.apache.logging.log4j", module: "log4j-web")
+        exclude(group: "org.apache.logging.log4j", module: "log4j-jcl")
+        exclude(group: "org.apache.logging.log4j", module: "log4j-slf4j-impl")
+        exclude(group: "org.apache.logging.log4j", module: "log4j-slf4j2-impl")
+        exclude(group: "org.apereo.cas", module: "cas-server-core-logging")
+        /*
+            DevTools and Spring Cloud Bootstrap do not support native images.
+         */
+        exclude(group: "org.springframework.boot", module: "spring-boot-devtools")
+        exclude(group: "org.springframework.cloud", module: "spring-cloud-starter-bootstrap")
+    }
 }
 
 dependencies {
     compileOnly libraries.graalvmsdk
-    
+
     implementation project(":webapp:cas-server-webapp-init")
     implementation project(":webapp:cas-server-webapp-resources")
     implementation project(":webapp:cas-server-webapp-init-tomcat")
@@ -32,8 +47,8 @@ dependencies {
     implementation project(":core:cas-server-core-audit")
     implementation project(":core:cas-server-core-authentication")
     implementation project(":core:cas-server-core-authentication-api")
-    implementation project(":core:cas-server-core-configuration")
     implementation project(":core:cas-server-core-cookie")
+    implementation project(":core:cas-server-core-configuration")
     implementation project(":core:cas-server-core-logout")
     implementation project(":core:cas-server-core-services")
     implementation project(":core:cas-server-core-services-api")
@@ -44,8 +59,10 @@ dependencies {
     implementation project(":core:cas-server-core-validation")
     implementation project(":core:cas-server-core-web")
     implementation project(":core:cas-server-core-webflow-api")
+    implementation project(":core:cas-server-core-webflow")
     implementation project(":core:cas-server-core-notifications")
 
+    implementation project(":support:cas-server-support-native")
     implementation project(":support:cas-server-support-webconfig")
     implementation project(":support:cas-server-support-logback")
     implementation project(":support:cas-server-support-person-directory")
@@ -55,4 +72,110 @@ dependencies {
     implementation project(":support:cas-server-support-actions")
     implementation project(":support:cas-server-support-actions-core")
     implementation project(":support:cas-server-support-pm-webflow")
+
+    def casModules = providers.systemProperty("casModules").getOrNull()
+    if (casModules != null) {
+        def dependencies = casModules.split(",")
+        dependencies.each {
+            def projectsToAdd = rootProject.subprojects.findAll {project ->
+                def pattern = /cas-server-${it}|cas-server-core-${it}|cas-server-support-${it}/
+                logger.debug("Matching ${pattern} against CAS module ${project.name}")
+                project.name.matches(pattern)
+            }
+
+            ansi.green("Including CAS module(s): ${projectsToAdd} in native web application")
+            projectsToAdd.each {
+                implementation it
+            }
+        }
+    }
+    
+    testImplementation libraries.graalvmsdk
+}
+
+graalvmNative {
+    metadataRepository {
+        enabled = true
+        version = "${graalVmMetadataRepositoryVersion}"
+    }
+
+    /*
+        The toolchain detection cannot distinguish between
+        GraalVM JDKs and standard JDKs without Native Image support.
+     */
+    toolchainDetection = false
+
+    binaries {
+        main {
+            imageName = "cas"
+            quickBuild = false
+            debug = true
+            verbose = false
+            richOutput = true
+            sharedLibrary = false
+            
+            configurationFileDirectories.from(file('src/graal'))
+
+            buildArgs.add('--allow-incomplete-classpath')
+            buildArgs.add('-H:+ReportExceptionStackTraces')
+            buildArgs.add('-H:+InlineBeforeAnalysis')
+            buildArgs.add('-H:+TraceSecurityServices')
+
+            buildArgs.add('--initialize-at-build-time=org.hibernate.internal.util.ReflectHelper')
+
+            buildArgs.add('--initialize-at-build-time=java.beans.Introspector')
+            buildArgs.add('--initialize-at-build-time=com.sun.beans')
+
+            buildArgs.add('--initialize-at-build-time=groovyjarjarantlr4.v4.runtime')
+            buildArgs.add('--initialize-at-build-time=org.codehaus.groovy')
+            buildArgs.add('--initialize-at-build-time=org.apache.groovy')
+            buildArgs.add('--initialize-at-build-time=groovy.lang')
+
+            buildArgs.add('--initialize-at-run-time=com.sun.xml.ws,org.codehaus.groovy.control.XStreamUtils,org.codehaus.groovy.vmplugin.v8.Java8\$LookupHolder,groovy.grape.GrapeIvy')
+            buildArgs.add("--initialize-at-run-time=org.bouncycastle.jcajce.provider.drbg.DRBG\$Default,org.bouncycastle.jcajce.provider.drbg.DRBG\$NonceAndIV")
+
+            buildArgs.add('--features=org.apereo.cas.nativex.features.BouncyCastleProviderFeature')
+
+            buildArgs.add('--enable-url-protocols=jar')
+
+            buildArgs.add("-g")
+            buildArgs.add("-O0")
+
+        }
+    }
+}
+
+processAot {
+    def list = []
+    list.add("--add-opens")
+    list.add("java.base/java.lang=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/java.util=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/java.time=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/java.net=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/sun.security.action=jdk.crypto.ec")
+    list.add("--add-opens")
+    list.add("java.base/java.nio=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/sun.nio.ch=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.management/sun.management=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("jdk.management/com.sun.management.internal=ALL-UNNAMED")
+    list.add("-Xdebug")
+    list.add("-Xrunjdwp:transport=dt_socket,address=*:5005,server=y,suspend=n")
+
+    jvmArgs = list
+
+    args(
+        "--spring.profiles.active=native",
+        "--spring.main.lazy-initialization=false",
+        "--logging.level.org.apereo.cas=info",
+        "--logging.level.org.springframework.core.env=info",
+        "--logging.level.org.springframework.boot=info",
+        "--logging.level.org.springframework.security=warn"
+    )
 }
